--- a/modules/m13/m13-intro.qmd
+++ b/modules/m13/m13-intro.qmd
@@ -21,3 +21,5 @@
 - [Project Charters (Princeton)](https://cdh.princeton.edu/research/project-management/charters/)
 - [Dataset Curation Template (Princeton)](https://cdh.princeton.edu/documents/11/dataset_curation_charter_template_(2).pdf)
 
+## Videos
+
