--- a/modules/m01/m01-intro.qmd
+++ b/modules/m01/m01-intro.qmd
@@ -6,3 +6,7 @@
 -   Access Rivanna
 -   Explore the Unix command line
 -   Explore use of Git and GitHub
+
+## Videos
+
+<iframe src="https://kaltura-prod.its.virginia.edu/embedplaylist/secure/embed/v2/0/playlistId/1_2gso1avp/uiConfId/55951532" width="960px" height="540px" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerpolicy="no-referrer-when-downgrade" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
