--- a/modules/m12/m12-intro.qmd
+++ b/modules/m12/m12-intro.qmd
@@ -28,3 +28,7 @@
 -   [R Markdown Cookbook (Yihui Xie, Christophe Dervieux, Emily Riederer)](https://bookdown.org/yihui/rmarkdown-cookbook/)
 -   [Getting Started with R Markdown — Guide and Cheatsheet (Dataquest)](https://www.dataquest.io/blog/r-markdown-guide-cheatsheet/)
 -   [Gallery (RStudio)](https://rmarkdown.rstudio.com/gallery.html)
+
+## Videos
+
+<iframe src="https://kaltura-prod.its.virginia.edu/embedplaylist/secure/embed/v2/0/playlistId/1_544nc934/uiConfId/55951532" width="960px" height="540px" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" referrerpolicy="no-referrer-when-downgrade" sandbox="allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="Kaltura Player"></iframe>
