--- a/pages/M03-Exercises.qmd
+++ b/pages/M03-Exercises.qmd
@@ -1,5 +1,5 @@
-# M03 Exercises
+# Exercises
 
 {{< include snippets/exercise-instructions.qmd >}}
 
-[Exercises](../../exercises/M03-Exercises.slides.html)
+[Exercises](../../exercises/M03-Exercises.slides.html){target="_blank" .btn .btn-outline-primary .btn role="button"}
